dbeaver/pro#3820 Indicate not supported procedures for SQLite