@@ -33,7 +33,6 @@ import org.jkiss.dbeaver.model.struct.*;
 import org.jkiss.dbeaver.model.struct.rdb.DBSProcedure;
 import org.jkiss.dbeaver.model.struct.rdb.DBSProcedureContainer;
 
-import java.sql.SQLFeatureNotSupportedException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -294,7 +293,9 @@ public class SQLSearchUtils {
             if (!DBStructUtils.isConnectedContainer(child)) {
                 child = null;
             }
-            if (anyObject && child == null && parent instanceof DBSProcedureContainer procsContainer) {
+            if (anyObject && child == null && parent instanceof DBSProcedureContainer procsContainer
+                && parent.getDataSource().getInfo().supportsStoredCode()
+            ) {
                 List<? extends DBSObject> objs = findProcedures(monitor, procsContainer, childName);
                 if (objs.size() > 0) {
                     return objs;
@@ -321,26 +322,21 @@ public class SQLSearchUtils {
         @NotNull DBSProcedureContainer procsContainer,
         @NotNull String procedureName
     ) throws DBException {
-        try {
-            DBSProcedure child = procsContainer.getProcedure(monitor, procedureName);
-            if (child != null) {
-                return List.of(child);
-            } else {
-                Collection<? extends DBSProcedure> procs = procsContainer.getProcedures(monitor);
-                if (procs != null) {
-                    List<? extends DBSProcedure> matchedProcs = procs.stream().filter(p -> p.getName().equals(procedureName)).toList();
-                    if (matchedProcs.size() > 0) {
-                        return matchedProcs;
-                    } else {
-                        return Collections.emptyList();
-                    }
+        DBSProcedure child = procsContainer.getProcedure(monitor, procedureName);
+        if (child != null) {
+            return List.of(child);
+        } else {
+            Collection<? extends DBSProcedure> procs = procsContainer.getProcedures(monitor);
+            if (procs != null) {
+                List<? extends DBSProcedure> matchedProcs = procs.stream().filter(p -> p.getName().equals(procedureName)).toList();
+                if (matchedProcs.size() > 0) {
+                    return matchedProcs;
                 } else {
                     return Collections.emptyList();
                 }
+            } else {
+                return Collections.emptyList();
             }
-        } catch (SQLFeatureNotSupportedException ex) {
-            log.trace("Cannot search for procedure object " + procedureName, ex);
-            return Collections.emptyList();
         }
     }
 }
